--- a/course-project-starting-setup/public/help/index.html
+++ b/course-project-starting-setup/public/help/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/src/css/help.css">
+  <!-- 복수의 페이지를 가지고 있다면 모든 페이지에 이것을 넣어주어야 한다. -->
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 
