--- a/course-project-starting-setup/public/index.html
+++ b/course-project-starting-setup/public/index.html
@@ -8,10 +8,13 @@
   <title>PWAGram</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- 이 설정이 어플리케이션을 반응형으로 만들어 준다. -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/src/css/app.css">
   <link rel="stylesheet" href="/src/css/feed.css">
+  <!-- 복수의 페이지를 가지고 있다면 모든 페이지에 이것을 넣어주어야 한다. -->
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 
